--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
 
 dependencies {
 
+    // Add moshi converter
+    implementation 'com.squareup.moshi:moshi:1.12.0'
+
+    // Retrofit library
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
